<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">To Do</string>
    <string name="add_todo">Add Todo</string>
    <string name="no_todos">Press \'+\' to add a Todo!</string>
    <string name="todo_title">Title</string>
    <string name="todo_description">Description (optional)</string>
    <string name="select_date_time">Select Date &amp; Time</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_none">Do not repeat</string>
    <string name="repeat_hourly">Every hour</string>
    <string name="repeat_daily">Every day</string>
    <string name="repeat_weekly">Every week</string>
    <string name="repeat_monthly">Every month</string>
    <string name="repeat_yearly">Every year</string>
    <string name="tags">Tags</string>
    <string name="add_tag">Add Tag</string>
    <string name="tag_name">Tag name</string>
    <string name="tag_color">Color</string>
    <string name="manage_tags">Manage Tags</string>
    <string name="create_new_tag">Create new tag</string>
    <string name="no_tags">No tags</string>
    <string name="tag_created">Tag created</string>
    <string name="please_enter_tag_name">Please enter a tag name</string>
    <string name="home">Home</string>
    <string name="by_tag">By Tag</string>
    <string name="settings">Settings</string>
    <string name="untagged">Untagged</string>
    <string name="delete_tag">Delete Tag</string>
    <string name="edit_tag">Edit Tag</string>
    <string name="confirm_delete_tag">Are you sure you want to delete this tag?</string>
    <string name="clear_data">Clear All Data</string>
    <string name="confirm_clear_data">Are you sure you want to delete all todos and tags? This cannot be undone.</string>
    <string name="data_cleared">All data has been cleared</string>
    <string name="language">Language</string>
    <string name="language_changed">Language changed. Please restart the app.</string>
</resources>
